fixed styling on vertically aligned toolbar dropdowns
also fixed ordering of iconbars was broken since grouping was introduced

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -338,10 +338,6 @@ div:hover > .hover-expand {
   }
 }
 
-.dropdown svg,
-.dropup svg {
-  margin-right: 8px;
-}
 .Select-placeholder, .Select--single>.Select-control .Select-value {
   color: $gray;
 }
